Melhoria na estrutura de diretórios.